--- a/jednostka_akademicka/pom.xml
+++ b/jednostka_akademicka/pom.xml
@@ -55,6 +55,10 @@
             <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
