--- a/jednostka_akademicka/src/main/resources/application.properties
+++ b/jednostka_akademicka/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:oracle:thin:@ORA3.ELKA.PW.EDU.PL:1521:ORA3INF
-spring.datasource.username= MRUTKOW4
-spring.datasource.password= mrutkow4
+spring.datasource.url= 
+spring.datasource.username= 
+spring.datasource.password= 
 logging.level.root = INFO
